Unwanted color space conversion done by OS X
Submitted by Adrian
Assigned to Vladimir Vukicevic @vladimir
Description
I am opening this ticket because display color management by Gimp under Mac OS X 10.8 or later, is incorrect. It appears that this issue goes back to the cairo quartz backend, used by Gimp.
As I understand it, cairo does not do any color management. The intended behavior of cairo is that it passes on the colors unchanged to the display.
This is what appears to be happening under Mac OS X. The display always has a color profile. By default, the OS creates the profile from the gamma and primary information in the EDID. The OS always color manages the display. From the cairo manual on quartz surfaces: "The surface is created using the Device RGB (or Device Gray, for A8) color space." Up to OS X 10.7, Device RGB was, in effect, the monitor color space. From OS X 10.8, Device RGB is sRGB. The intended behavior of cairo has been derailed by this change. We get an unwanted conversion from sRGB to the display profile, done by the OS.
So the fix would be to modify the system call so that the surface is definitely in the monitor color space.
Versions: I do not know which version of cairo was used to build Gimp 2.8.16. My OS version is 10.9.5.
Unfortunately I don't know how I could test any fix that might be proposed. I am a user of Gimp who noted the display color management issue; and who eventually discovered, with a hint from a Gimp developer, that the issue appears to go back to the cairo quartz backend. Other than that, I have no experience of Gimp or cairo development (least of all, building working binaries). My original bug report on Gimp is here: https://bugzilla.gnome.org/show_bug.cgi?id=739989