Use display colorspace for performance

Can disable in case color accuracy is needed
Will fallback to device colorspace (sRGB on 10.8 and later)

See Cairo investigation:
https://gitlab.freedesktop.org/cairo/cairo/-/issues/330